css/custom.css
h1, h2, h3, h4, h5, h6 {
  font-family: "Playfair Display SC", serif;
  color: #333333; }

a, p, li {
  font-family: "Lato", Arial, sans-serif;
  color: #4e4e4e;
  font-size: 1em;
  line-height: 1.75em; }

a:hover {
  text-decoration: none !important;
  color: #333333 !important;
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out; }

.last {
  margin-bottom: 40px;
}

.container {
  margin: auto;
  max-width: 662px;
  padding: 0 20px; 
margin-left: 15px;}

@media only screen and (max-width: 767px) {
  .intro img {
    display: block;
    margin-left: auto;
    margin-right: auto; }

  footer { text-align: center; } 
  .intro { display: none; }
  .intro h1:before { display: none; }
  
  }
.typed-cursor {
  opacity: 1;
  font-weight: 100;
  -webkit-animation: blink 0.7s infinite;
  -moz-animation: blink 0.7s infinite;
  -ms-animation: blink 0.7s infinite;
  -o-animation: blink 0.7s infinite;
  animation: blink 0.7s infinite; }

@-webkit-keyframes blink {
  0% {
    opacity: 1; }
  50% {
    opacity: 0; }
  100% {
    opacity: 1; } }
@-moz-keyframes blink {
  0% {
    opacity: 1; }
  50% {
    opacity: 0; }
  100% {
    opacity: 1; } }
@-ms-keyframes blink {
  0% {
    opacity: 1; }
  50% {
    opacity: 0; }
  100% {
    opacity: 1; } }
@-o-keyframes blink {
  0% {
    opacity: 1; }
  50% {
    opacity: 0; }
  100% {
    opacity: 1; } }
.main-nav {
  background: #f4f4f4;
  padding-top: 23px; }
  .main-nav nav ul li a {
    color: #a7a7a7; }
  .main-nav nav ul li.active a {
    color: #4d4d4d; }
  .section {
   margin-top: 5%; 
  }
  .intro {
    padding: 50px 0px 70px 0px;
    overflow-x: hidden;
    display: block;
  }
  .intro img {
    width: 81px;
    height: 81px;
    border-radius: 99px; }
  .intro .wrap {
    margin: 30px 0px; }
  .intro h1 span {
    font-size: 47px; }

.work .work-list {
  margin-left: 10px; }
  .work .work-list li {
    list-style: none;
    font-size: 0.9375em;
    color: #8c8c8c; 
  }
    .work .work-list li a {
      padding-bottom: 5px;
      font-size: 1.1875em;
      font-weight: 700;
      text-decoration: none;
      border-bottom: 1px solid #b3b3b3; }
      .work .work-list li a:hover {
        border-bottom: 1px solid #333333; }

.skills .skill-list {
  margin-left: 10px; }
  .skills .pskill-list li {
    font-size: 0.9375em;
    color: #8c8c8c;
    margin-left: 10px; }
    .skills .skill-list li:first-child {
    font-size: 0.9375em;
    color: #8c8c8c;
}

  @import url(https://fonts.googleapis.com/css?family=Lato:100);
 .hr {
  width: 100%;
  padding: 2em 0;
  z-index: -1;
}
 .hr:after, .hr:before {
	 content: "";
	 position: absolute;
	 width: 100%;
	 height: 15px;
	 bottom: 50%;
	 left: 0;
}

 .hr:after {
	 transition: opacity 1s ease, animation 1s ease;
	 background: linear-gradient(to right, #62efab 5%, #f2ea7d 15%, #f2ea7d 25%, #ff8797 35%, #ff8797 45%, #e1a4f4 55%, #e1a4f4 65%, #82fff4 75%, #82fff4 85%, #62efab 95%);
	 background-size: 200%;
	 background-position: 0%;
   animation: bar 5s linear infinite;
   height: 25px;
}
 @keyframes bar {
	 0% {
		 background-position: 0%;
	}
	 100% {
		 background-position: 200%;
	}
}
 .hr:before {
   background: linear-gradient(
    #ffffff 0%, #ffffff 10%, transparent 10%, transparent 20%, #ffffff 20%, #ffffff 30%, transparent 30%, transparent 40%, #ffffff 40%,
    #ffffff 50%,transparent 50%, transparent 60%, #ffffff 60%, #ffffff 70%, transparent 70%, transparent 80%, #ffffff 80%, 
    #ffffff 90%, transparent 90%, transparent 100%, #ffffff 100%);
	 background-size: 1500px;
	 animation: bar 12s linear infinite;
}

